# ckdigest

./: NOTES.md  README.md  README.setup.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
src/: App.css  App.tsx  TitleBar.css  TitleBar.tsx  main.ts  please-wait.css  styles.css  tauri.ts
src-tauri/: Cargo.toml  OpenSSL Digest Notes.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  hash_function.rs  main.rs
